# spacebot

./: .coderabbit.yaml  .dockerignore  .gitignore  .spacedrive-version  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross-aarch64  Dockerfile.pi  METRICS.md  README.md  SPACEUI_MIGRATION.md  docker-entrypoint.sh  fix.js  fix.sh  flake.nix  fly.staging.toml  fly.toml  justfile  patch.diff  rig-spacebot-alignment-plan.md
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit
chips/: coding.yaml  communication.yaml  personal.yaml  productivity.yaml  research.yaml
desktop/: package.json  tauri.windows.conf.json
desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/crates/macos/: Cargo.toml  Package.swift  build.rs
desktop/src-tauri/crates/macos/src/: lib.rs
desktop/src-tauri/crates/macos/src-swift/: window.swift
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: README.md  cortex.md  docker.md  mattermost.md  mcp.md  mdx-components.tsx  memory.md  metrics.md  next.config.mjs  package.json  permissions.md  tools.md
interface/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
mcp-bridge/: README.md  spacebot_mcp_server.py
migrations/: 20260212000002_memory_created_at_index.sql  (+23 more)
tests/parity_fixtures/rust_basic/: Cargo.toml
tests/parity_fixtures/rust_basic/src/: lib.rs  main.rs  math.rs
(+903 files in other folders)
